# Metin2Timer

./: CMakeLists.txt  Readme.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
